--- a/action.yml
+++ b/action.yml
@@ -43,6 +43,7 @@ runs:
         IFS=', ' read -r -a COMMITS_ARRAY <<< "$COMMIT_IDS"
         COMMITS_COUNT="${#COMMITS_ARRAY[@]}"
         echo "::set-output name=COMMIT_COUNT::$COMMITS_COUNT"
+      shell: bash
     - name: Send Notification
       uses: fjogeleit/http-request-action@master
       with:
