--- a/action.yml
+++ b/action.yml
@@ -33,8 +33,8 @@ runs:
       #   - Get how many commits we have through their ID 
       id: get_commits
       run: |
-        commit_messages_string=`${{ join(github.event.commits.*.message, '\n') }}`
-        commit_messages_string=`${commit_messages_string}` | tr '\n' ' '
+        commit_messages_string='${{ join(github.event.commits.*.message, '\n') }}'
+        commit_messages_string='${commit_messages_string}' | tr '\n' ' '
         commit_messages_string=${commit_messages_string//\"/\\\"}
         commit_messages_string=${commit_messages_string//\'/\\\'}
         echo "::set-output name=COMMIT_MESSAGES::${commit_messages_string}"
