--- a/action.yml
+++ b/action.yml
@@ -33,6 +33,7 @@ runs:
       #   - Get how many commits we have through their ID 
       id: get_commits
       run: |
+        echo ${{ join(github.event.commits.*.message, ' ') }}
         commit_messages_string='${{ join(github.event.commits.*.message, '\n') }}'
         commit_messages_string='${commit_messages_string}' | tr '\n' ' '
         commit_messages_string=${commit_messages_string//\"/\\\"}
