--- a/action.yml
+++ b/action.yml
@@ -29,20 +29,22 @@ runs:
       # What we do here:
       #   - Remove any newlines
       #   - Replace double quotes with escaped double quotes
-      #   - Replace single quotes with escaped single quotes
-      #   - Get how many commits we have through their ID 
+      #   - If the commit message are too big, cut them down.
+      #   - Get how many commits we have through their unique commit ID. 
       id: get_commits
       run: |
-        echo ${{ join(github.event.commits.*.message, ' ') }}
-        commit_messages_string='${{ join(github.event.commits.*.message, '\n') }}'
-        commit_messages_string='${commit_messages_string}' | tr '\n' ' '
-        commit_messages_string=${commit_messages_string//\"/\\\"}
-        commit_messages_string=${commit_messages_string//\'/\\\'}
-        echo "::set-output name=COMMIT_MESSAGES::${commit_messages_string}"
+        COMMIT_MESSAGES="${{ join(github.event.commits.*.message, '\n') }}" | sed -E ':a;N;$!ba;s/\r{0,1}\n/\\n/g'
+
+        if [ -n $COMMIT_MESSAGES ] && [ ${#COMMIT_MESSAGES} -gt 1900 ]; then
+          COMMIT_MESSAGES="$(echo "$COMMIT_MESSAGES" | cut -c 1-1900)"
+          COMMIT_MESSAGES+="..."
+        fi
 
         COMMIT_IDS="${{ join(github.event.commits.*.id, ', ') }}"
         IFS=', ' read -r -a COMMITS_ARRAY <<< "$COMMIT_IDS"
         COMMITS_COUNT="${#COMMITS_ARRAY[@]}"
+
+        echo "::set-output name=COMMIT_MESSAGE::${COMMIT_MESSAGES}"
         echo "::set-output name=COMMIT_COUNT::$COMMITS_COUNT"
       shell: bash
     - name: Send Notification
