Add back braces
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc a accumsan felis. Suspendisse fermentum, mi tincidunt pretium aliquet, nisi felis consequat nisl, placerat porttitor lacus orci vitae lacus. Nulla sed orci at turpis pulvinar tempus. Quisque ultricies malesuada fermentum. Aenean a ipsum at velit sodales ornare. Sed non fringilla arcu. Donec scelerisque ipsum nec leo placerat luctus. Suspendisse eu ipsum vitae lorem scelerisque faucibus. Nunc scelerisque ut risus quis ullamcorper. Ut libero nulla, accumsan et dui eu, convallis pellentesque eros. Aenean non luctus est. Nulla et neque lacinia, mattis risus quis, accumsan leo.

Donec ultrices tincidunt risus, vel lobortis orci hendrerit non. Praesent ultrices nibh sed dignissim molestie. Duis et ante quis sem rutrum tempor. Nam lobortis, enim eget molestie egestas, enim mi laoreet risus, quis placerat leo enim sed mauris. In vehicula pulvinar enim, lobortis bibendum leo posuere ac. Pellentesque ut maximus massa. Suspendisse est eros, tristique efficitur est eget, euismod semper turpis. Proin arcu nulla, varius id lectus a, varius mollis diam. Cras ac nulla placerat, mollis tortor sit amet, ullamcorper nisl. Sed vitae pharetra ante.

--- a/action.yml
+++ b/action.yml
@@ -43,7 +43,7 @@ runs:
         IFS=', ' read -r -a COMMITS_ARRAY <<< "$COMMIT_IDS"
         COMMITS_COUNT="${#COMMITS_ARRAY[@]}"
 
-        echo "::set-output name=COMMIT_MESSAGE::$COMMIT_MESSAGES"
+        echo "::set-output name=COMMIT_MESSAGE::{$COMMIT_MESSAGES}"
         echo "::set-output name=COMMIT_COUNT::$COMMITS_COUNT"
       shell: bash
     - name: Send Notification
