--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ runs:
   using: "composite"
   steps:
     - name: Get Current Time
-      uses: josStorer/get-current-time@v2
+      uses: josStorer/get-current-time@master
       id: get_time
     - name: Get User Avatar
       uses: fjogeleit/http-request-action@master
