Separate test workflows for dev

--- a/.github/workflows/test-notification-dev.yml
+++ b/.github/workflows/test-notification-dev.yml
@@ -1,8 +1,8 @@
-name: Test Workflow
+name: Test Workflow (Dev)
 
 on:
   push:
-    branches: [ main ]
+    branches: [ dev ]
 
 jobs:
   test_discord_notification:
@@ -10,7 +10,7 @@ jobs:
     name: Test Notification
     steps:
       - name: Send Notification
-        uses: Retr0-01/better-discord-notification@main
+        uses: Retr0-01/better-discord-notification@dev
         with:
           webhook-url: ${{ secrets.CI_DISCORD_WEBHOOK_PUBLIC }}
           embed-color: '3093151'
