Edit README.md, shorter input

--- a/.github/workflows/test-notification.yml
+++ b/.github/workflows/test-notification.yml
@@ -13,5 +13,6 @@ jobs:
         uses: Retr0-01/better-discord-notification@main
         with:
           webhook-url: ${{ secrets.CI_DISCORD_WEBHOOK_PUBLIC }}
+          msg-content: 'New commit.'
           embed-color: '3093151'
           footer-icon: 'https://cdn.discordapp.com/attachments/712252851283296260/961953852897255454/706526933973860412.png'
